package iterfaces;

import util.Infor;

public interface AddItf {		//增加信息接口
	public int add(Infor infor);
}
