package iterfaces;

import util.Infor;

public interface ChangeItf {//改变信息接口（信息状态）
	public void change(Infor infor);
}
