package iterfaces;


public interface DeleteItf {//删除信息接口（接取后自动不再显示）
	public int delete(int no,String type);
}
