@startuml

title __BOUNTY HUNTER's Class Diagram__\n

  namespace iterfaces {
    interface iterfaces.AddItf {
    }
  }
  

  namespace iterfaces {
    interface iterfaces.AddItf {
    }
  }
  

  namespace iterfaces {
    interface iterfaces.ChangeItf {
    }
  }
  

  namespace iterfaces {
    interface iterfaces.ChangeItf {
    }
  }
  

  namespace iterfaces {
    interface iterfaces.DeleteItf {
    }
  }
  

  namespace iterfaces {
    interface iterfaces.DeleteItf {
    }
  }
  

  namespace iterfaces {
    interface iterfaces.SearchItf {
    }
  }
  

  namespace iterfaces {
    interface iterfaces.SearchItf {
    }
  }
  

  namespace method {
    class method.Delete {
    }
  }
  

  namespace method {
    class method.Delete {
    }
  }
  

  namespace method {
    class method.HelpAdd {
    }
  }
  

  namespace method {
    class method.HelpAdd {
    }
  }
  

  namespace method {
    class method.Insert {
    }
  }
  

  namespace method {
    class method.Insert {
    }
  }
  

  namespace method {
    class method.Login {
    }
  }
  

  namespace method {
    class method.Login {
    }
  }
  

  namespace method {
    class method.Search {
    }
  }
  

  namespace method {
    class method.Search {
    }
  }
  

  namespace method {
    class method.Show {
    }
  }
  

  namespace method {
    class method.Show {
    }
  }
  

  namespace util {
    class util.Infor {
    }
  }
  

  namespace util {
    class util.Infor {
    }
  }
  

  namespace util {
    class util.JDBC_link {
    }
  }
  

  namespace util {
    class util.JDBC_link {
    }
  }
  

  namespace util {
    class util.USERS {
    }
  }
  

  method.Delete .up.|> iterfaces.DeleteItf
  method.Delete o-- util.JDBC_link : getcon
  method.Delete .up.|> iterfaces.DeleteItf
  method.Delete o-- util.JDBC_link : getcon
  method.HelpAdd .up.|> iterfaces.AddItf
  method.HelpAdd o-- util.JDBC_link : getcon
  method.HelpAdd .up.|> iterfaces.AddItf
  method.HelpAdd o-- util.JDBC_link : getcon
  method.Insert o-- util.JDBC_link : getcon
  method.Insert o-- util.JDBC_link : getcon
  method.Login o-- util.JDBC_link : getcon
  method.Login o-- util.JDBC_link : getcon
  method.Search .up.|> iterfaces.SearchItf
  method.Search o-- util.JDBC_link : getcon
  method.Search .up.|> iterfaces.SearchItf
  method.Search o-- util.JDBC_link : getcon
  method.Show o-- util.JDBC_link : getcon
  method.Show o-- util.JDBC_link : getcon


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
